# ros2-learning

./: .claudeignore  .gitignore  CLAUDE.md  Makefile  README.md  requirements.txt  setup.sh
.claude/skills/commit/: SKILL.md
install/: local_setup.sh  setup.sh
install/py_pubsub/lib/py_pubsub/: listener  talker
install/py_pubsub/share/py_pubsub/: package.sh  package.xml
log/: latest_build
scripts/: download_models.py
src/pubsub/: package.xml  setup.cfg  setup.py
src/pubsub/launch/: pubsub_launch.py
src/pubsub/pubsub/: publisher.py
src/py_pubsub/: setup.cfg  setup.py
src/py_pubsub/py_pubsub/: subscriber.py
src/speech_recognition/: package.xml  setup.py
src/speech_recognition/speech_recognition/: audio_stream.py  constants.py  speech_node.py  vad.py  whisper_recognizer.py
